--- a/Project4/Site1.Master
+++ b/Project4/Site1.Master
@@ -14,14 +14,19 @@
 <body>
     <hr />
     <form id="form1" runat="server">
+    <asp:ScriptManager runat="server"></asp:ScriptManager>
         <uc1:SiteNavigation runat="server" id="SiteNavigation" />
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
         <hr />
+        <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
             </asp:ContentPlaceHolder>
+        <asp:Timer ID="Timer1" runat="server" OnTick="Timer1_Tick" Interval="1000" Enabled="true"></asp:Timer>
+        <asp:Label ID="TimerLabel" runat="server" Text=""></asp:Label>
+        </div>
     </form>
 </body>
 </html>
