--- a/Project4/Site1.Master
+++ b/Project4/Site1.Master
@@ -24,8 +24,12 @@
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server">
             </asp:ContentPlaceHolder>
+        <asp:UpdatePanel ID="UpdatePanel1" UpdateMode="Conditional" runat="server">
+            <ContentTemplate>
         <asp:Timer ID="Timer1" runat="server" OnTick="Timer1_Tick" Interval="1000" Enabled="true"></asp:Timer>
         <asp:Label ID="TimerLabel" runat="server" Text=""></asp:Label>
+            </ContentTemplate>
+        </asp:UpdatePanel>
         </div>
     </form>
 </body>
